--- a/SOV-spoiler.html
+++ b/SOV-spoiler.html
@@ -278,7 +278,7 @@
 			<div class="container"><img alt="sets\SOV-files\img\34_UW08 Augmented Convoy.png" id="34" data-flag="@X" onclick="openSidebar('34')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\74_UU08 Oldsteel Interdictor.png" id="74" data-flag="@X" onclick="openSidebar('74')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\114_UB11 Augmented Ascent.png" id="114" data-flag="@X" onclick="openSidebar('114')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\151_UR09 Oldsteel Terraformer.png" id="151" data-flag="@X" onclick="openSidebar('151')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\151_UR09 Oldsteel Exhortationer.png" id="151" data-flag="@X" onclick="openSidebar('151')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\190_UG08 Cunning Dunbreaker.png" id="190" data-flag="@X" onclick="openSidebar('190')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\35_UW09 Dunland Maestro.png" id="35" data-flag="@X" onclick="openSidebar('35')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\75_UU09 Forsaken Submersible.png" id="75" data-flag="@X" onclick="openSidebar('75')"></div>
