--- a/cards/SOV/151_UR09 Oldsteel Exhortationer.html
+++ b/cards/SOV/151_UR09 Oldsteel Exhortationer.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-  <title>UR09 Oldsteel Terraformer</title>
+  <title>UR09 Oldsteel Exhortationer</title>
   <link rel="icon" type="image/x-icon" href="/img/favicon.png">
   <link rel="stylesheet" href="/resources/mana.css">
   <link rel="stylesheet" href="/resources/header.css">
@@ -198,7 +198,7 @@
 					card_list_arrayified[i] = card_list_arrayified[i].split('\t');
 				}
 
-			await fetch('/cards/SOV/151_UR09 Oldsteel Terraformer.txt')
+			await fetch('/cards/SOV/151_UR09 Oldsteel Exhortationer.txt')
 				.then(response => response.text())
 				.then(text => {
 					card = text;
