--- a/SOV-spoiler.html
+++ b/SOV-spoiler.html
@@ -176,7 +176,7 @@
 			<div class="container"><img alt="sets\SOV-files\img\88_Cutthroat Scrapper.png" id="88" data-flag="@X" onclick="openSidebar('88')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\138_Leygrid Rupture.png" id="138" data-flag="@X" onclick="openSidebar('138')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\191_Tempered Wurm.png" id="191" data-flag="@X" onclick="openSidebar('191')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\33_Timeless Steeldancer.png" id="33" data-flag="@X" onclick="openSidebar('33')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\32_Timeless Steeldancer.png" id="32" data-flag="@X" onclick="openSidebar('32')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\64_Ruinous Uplink.png" id="64" data-flag="@X" onclick="openSidebar('64')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\98_Kajiwara, Spark of Sorrow.png" id="98" data-flag="@X" onclick="openSidebar('98')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\156_X'Teth, Crimson Leykeeper.png" id="156" data-flag="@X" onclick="openSidebar('156')"></div>
@@ -211,17 +211,17 @@
 			<div class="container"><img alt="sets\SOV-files\img\102_Legion Potentate.png" id="102" data-flag="@X" onclick="openSidebar('102')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\132_Gun Down.png" id="132" data-flag="@X" onclick="openSidebar('132')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\181_Sanctuary Dreamer.png" id="181" data-flag="@X" onclick="openSidebar('181')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\25_RW09 Visage of the Core.png" id="25" data-flag="@X" onclick="openSidebar('25')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\27_Shadowed Steelgiver.png" id="27" data-flag="@X" onclick="openSidebar('27')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\54_Matchless Scavenger.png" id="54" data-flag="@X" onclick="openSidebar('54')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\105_Oldsteel Reclamation.png" id="105" data-flag="@X" onclick="openSidebar('105')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\135_Katesh, Savage Show-Off.png" id="135" data-flag="@X" onclick="openSidebar('135')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\183_Sanctuary Manacyte.png" id="183" data-flag="@X" onclick="openSidebar('183')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\28_Shadowed Steelgiver.png" id="28" data-flag="@X" onclick="openSidebar('28')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\31_Sunbleached Strider.png" id="31" data-flag="@X" onclick="openSidebar('31')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\58_Oldsteel Originant.png" id="58" data-flag="@X" onclick="openSidebar('58')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\109_Persistent Expeditioner.png" id="109" data-flag="@X" onclick="openSidebar('109')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\142_Oldsteel Malefactor.png" id="142" data-flag="@X" onclick="openSidebar('142')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\188_Savage Sandthresher.png" id="188" data-flag="@X" onclick="openSidebar('188')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\32_Sunbleached Strider.png" id="32" data-flag="@X" onclick="openSidebar('32')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\34_Visage of the Core.png" id="34" data-flag="@X" onclick="openSidebar('34')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\66_Sanctuary Flowbreaker.png" id="66" data-flag="@X" onclick="openSidebar('66')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\112_Ruins Campaign.png" id="112" data-flag="@X" onclick="openSidebar('112')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\143_Raider's Lesson.png" id="143" data-flag="@X" onclick="openSidebar('143')"></div>
@@ -286,12 +286,12 @@
 			<div class="container"><img alt="sets\SOV-files\img\110_Relentless Steelhound.png" id="110" data-flag="@X" onclick="openSidebar('110')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\152_Starved Brute.png" id="152" data-flag="@X" onclick="openSidebar('152')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\179_Roaming Monitor.png" id="179" data-flag="@X" onclick="openSidebar('179')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\27_Scrapper's Pirouette.png" id="27" data-flag="@X" onclick="openSidebar('27')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\26_Scrapper's Pirouette.png" id="26" data-flag="@X" onclick="openSidebar('26')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\68_Scavenger Sprite.png" id="68" data-flag="@X" onclick="openSidebar('68')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\111_Ruin Scrounger.png" id="111" data-flag="@X" onclick="openSidebar('111')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\153_Sucessful Salvage.png" id="153" data-flag="@X" onclick="openSidebar('153')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\184_Sanctuary Radiance.png" id="184" data-flag="@X" onclick="openSidebar('184')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\29_Shocklance Sentinel.png" id="29" data-flag="@X" onclick="openSidebar('29')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\28_Shocklance Sentinel.png" id="28" data-flag="@X" onclick="openSidebar('28')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\71_Steelbound Protector.png" id="71" data-flag="@X" onclick="openSidebar('71')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\113_Rustfeeder Hulk.png" id="113" data-flag="@X" onclick="openSidebar('113')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\154_Tunnel-Hunter Griff.png" id="154" data-flag="@X" onclick="openSidebar('154')"></div>
@@ -336,22 +336,22 @@
 			<div class="container"><img alt="sets\SOV-files\img\99_Legion Blackguard.png" id="99" data-flag="@X" onclick="openSidebar('99')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\145_Rubblerouser.png" id="145" data-flag="@X" onclick="openSidebar('145')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\173_Oasis Derelict.png" id="173" data-flag="@X" onclick="openSidebar('173')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\26_Scrapper Spirit.png" id="26" data-flag="@X" onclick="openSidebar('26')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\25_Scrapper Spirit.png" id="25" data-flag="@X" onclick="openSidebar('25')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\61_Refurbisher Virtuoso.png" id="61" data-flag="@X" onclick="openSidebar('61')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\101_Legion Coordinator.png" id="101" data-flag="@X" onclick="openSidebar('101')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\146_Salvaged Powerbrand.png" id="146" data-flag="@X" onclick="openSidebar('146')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\174_Oasis Tortoise.png" id="174" data-flag="@X" onclick="openSidebar('174')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\30_Steelbeater Stalwart.png" id="30" data-flag="@X" onclick="openSidebar('30')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\29_Steelbeater Stalwart.png" id="29" data-flag="@X" onclick="openSidebar('29')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\65_Sanctuary Brushwing.png" id="65" data-flag="@X" onclick="openSidebar('65')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\103_Oldsteel Imperator.png" id="103" data-flag="@X" onclick="openSidebar('103')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\148_Scavenger's Spark.png" id="148" data-flag="@X" onclick="openSidebar('148')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\182_Sanctuary Fervor.png" id="182" data-flag="@X" onclick="openSidebar('182')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\31_Steelbound Standoff.png" id="31" data-flag="@X" onclick="openSidebar('31')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\30_Steelbound Standoff.png" id="30" data-flag="@X" onclick="openSidebar('30')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\69_Scrappy Arcslinger.png" id="69" data-flag="@X" onclick="openSidebar('69')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\104_Oldsteel Prophet.png" id="104" data-flag="@X" onclick="openSidebar('104')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\150_Scrapyard Patrol.png" id="150" data-flag="@X" onclick="openSidebar('150')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\186_Sanctuary Sanctifier.png" id="186" data-flag="@X" onclick="openSidebar('186')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\34_Timely Tune-Up.png" id="34" data-flag="@X" onclick="openSidebar('34')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\33_Timely Tune-Up.png" id="33" data-flag="@X" onclick="openSidebar('33')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\70_Scrapyard Detour.png" id="70" data-flag="@X" onclick="openSidebar('70')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\107_Oldsteel Whispers.png" id="107" data-flag="@X" onclick="openSidebar('107')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\151_Slag Meltdown.png" id="151" data-flag="@X" onclick="openSidebar('151')"></div>
@@ -490,7 +490,7 @@
 			<div class="container"><img alt="sets\SOV-files\img\265_Roil-Marked Passage.png" id="265" data-flag="@X" onclick="openSidebar('265')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\264_Mist-Marked Strand.png" id="264" data-flag="@X" onclick="openSidebar('264')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\269_Steam-Marked Dune.png" id="269" data-flag="@X" onclick="openSidebar('269')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\261_Awe-Marked Monument.png" id="261" data-flag="@X" onclick="openSidebar('261')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\262_Awe-Marked Monument.png" id="262" data-flag="@X" onclick="openSidebar('262')"></div>
 			<div class="container"><img alt="img\er.png" id="" data-flag="@E" onclick="openSidebar('')"></div>
 			<div class="container"><img alt="img\er.png" id="" data-flag="@E" onclick="openSidebar('')"></div>
 			<div class="container"><img alt="img\er.png" id="" data-flag="@E" onclick="openSidebar('')"></div>
@@ -502,8 +502,8 @@
 			<div class="container"><img alt="img\er.png" id="" data-flag="@E" onclick="openSidebar('')"></div>
 			<div class="container"><img alt="img\er.png" id="" data-flag="@E" onclick="openSidebar('')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\273_Windswept Waystone.png" id="273" data-flag="@X" onclick="openSidebar('273')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\260_Ancient Font.png" id="260" data-flag="@X" onclick="openSidebar('260')"></div>
-			<div class="container"><img alt="sets\SOV-files\img\262_CL03 Alacsis' Encampment.png" id="262" data-flag="@X" onclick="openSidebar('262')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\260_Alacsis' Encampment.png" id="260" data-flag="@X" onclick="openSidebar('260')"></div>
+			<div class="container"><img alt="sets\SOV-files\img\261_Ancient Font.png" id="261" data-flag="@X" onclick="openSidebar('261')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\267_Sand-Scoured Foundry.png" id="267" data-flag="@X" onclick="openSidebar('267')"></div>
 			<div class="container"><img alt="sets\SOV-files\img\272_Wayfarer's Shrine.png" id="272" data-flag="@X" onclick="openSidebar('272')"></div>
 			<div class="container"><img alt="img\er.png" id="" data-flag="@E" onclick="openSidebar('')"></div>
